# kv_operator_matching

./: .gitignore  README.md  pyproject.toml
docs/: agent_bootstrap.md  experiment_precommit_template.md  old_repo_relationship.md  phase2_evidence_collection.md  phase3a_hybrid_selector.md  phase3b_anchor_region.md  phase3b_candidate_geometry.md  phase3b_candidate_geometry_rerank.md  phase3b_centroid_region_precursor.md  phase3b_fitted_pairmerge.md  phase3b_pairmerge.md  phase3c_qfit_controller.md  phase3c_quotient_refit.md  phase3c_quotient_selector.md  phase3c_qvfit_diagnostics.md  phase3c_qvfit_policy.md  phase3c_qvfit_representativeness.md  phase3c_shortlist_sweep.md  phase3c_stack_readjudication.md  qfit_metric_family.md  quotient_residual.md  roadmap.md  theory_sketch.md
docs/conjecture/: factorization.md
docs/precommits/: phase3a_prime_redundancy.md  phase3b_anchor_region.md  phase3b_candidate_geometry.md  phase3b_candidate_geometry_rerank.md  phase3b_centroid_region_precursor.md  phase3b_fitted_pairmerge.md  phase3b_pairmerge.md  phase3b_pairmerge_slice_followup.md  phase3c_quotient_selector.md
experiments/qwen2_online_nz_match/: README.md  compare_collection_modes.py  config.yaml  forensic_support_geometry.py  forensic_value_regime.py  phase3a_ablation_forensics.py  phase3b_anchor_region.py  phase3b_candidate_geometry.py  phase3b_candidate_geometry_rerank.py  phase3b_centroid_region_precursor.py  phase3b_fitted_pairmerge.py  phase3b_pairmerge.py  phase3c_quotient_refit.py  phase3c_quotient_selector.py  phase3c_qvfit_diagnostics.py  (+5 more)
results/: README.md
(+44 files in other folders)
