[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kv_operator_matching"
version = "0.1.0"
description = "KV cache operator approximation via N/Z factorization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
